# naagin

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt
hooks/: common.h  utils.h  winhttp.h  wininet.h
naagin/: __init__.py  imports.py  main.py
naagin/abstract/: __init__.py  encoding_middleware.py
naagin/apps/: __init__.py  cdn01.py  game.py  utils.py  www.py
naagin/bases/: __init__.py  exception.py  settings.py
naagin/bases/model/: __init__.py  har.py
naagin/classes/: __init__.py  async_session.py  static_files.py
naagin/decorators/: __init__.py
naagin/dependencies/: __init__.py
naagin/enums/: __init__.py  client_type.py  giftbox_message_type.py  information_category.py  item_consume_type.py  language.py  logging_level.py  master_version.py  recommended_rank.py  request_clear_rank.py  scene.py  uri_scheme.py
naagin/enums/header/: __init__.py  doaxvv.py  naagin.py
naagin/exceptions/: __init__.py  forbidden.py  friendship_not_found.py  internal_server_error.py  invalid_parameter.py  oauth_exception.py
naagin/factories/: __init__.py  header.py  schema.py
naagin/factories/header/: __init__.py  utils.py
naagin/filters/: __init__.py
naagin/hooks/: request.py
naagin/loggers/: __init__.py
naagin/middlewares/: __init__.py  aes.py  deflate.py
naagin/middlewares/middleware/: stacked.py
naagin/middlewares/request/: limiting_body.py
naagin/models/: __init__.py  bgm.py  favorite_private_item.py  friendly_value.py  giftbox_model.py  item_consume.py  owner_checked_at.py  owner_other.py  tutorial.py
naagin/models/api/: __init__.py
naagin/models/api01/: __init__.py
naagin/models/csv/: episode.py  girl_status.py
naagin/models/har/: __init__.py  before_request.py  cache.py  entry.py  header.py  page.py  request.py  timings.py
naagin/models/json/: __init__.py  csv_list.py  resource_file_list.py
naagin/providers/: __init__.py
naagin/providers/csv/: __init__.py  utils.py
naagin/providers/json/: __init__.py  utils.py
naagin/routers/: __init__.py
naagin/routers/api/: __init__.py
naagin/schemas/: __init__.py  bromide.py  casino_chip.py  casino_game.py  dishevelment_swimsuit.py  friendly_value.py  girl.py  girl_equipment.py  item_equipemnt.py  item_furniture.py  login_bonus.py  max_combine_swimsuit.py  onsen_quality_stash.py  owner.py  owner_count_login.py  owner_room.py  private_item.py  pyon2_run.py  request.py  request_log.py  special_order.py  tutorial.py  venus_board_girl_panel.py  venus_board_status.py  wallet.py  ywrk_skill.py
naagin/schemas/enums/: __init__.py
naagin/settings/: __init__.py  api.py  api01.py  app.py  application.py  cdn01.py  data.py  database.py  environment.py  game.py  logging.py  resource.py  version.py  www.py
naagin/types/: __init__.py  fields.py  headers.py  securities.py
naagin/types/dependencies/: csv.py
naagin/types_/: cookies.py  fields.py  headers.py  securities.py
naagin/types_/dependencies/: json.py
naagin/utils/: __init__.py  cached_resource.py  cached_static_files.py  custom_header.py  doaxvv_header.py  sqlalchemy_handler.py
scripts/: start.py
src/dumper/: config.py  csv_.py  flows.py  game.py  main.py  utils.py
src/naagin/: __init__.py  injectors.py  main.py
src/naagin/abstract/: __init__.py  decoder.py  encoder.py  encoding_middleware.py
src/naagin/apps/: __init__.py  api.py  game.py
src/naagin/bases/: __init__.py  exception.py  schema.py  settings.py
src/naagin/classes/: __init__.py  api_router.py  async_session.py  static_files.py
src/naagin/decorators/: __init__.py
src/naagin/dependencies/: __init__.py
src/naagin/enums/: __init__.py  auto_index_format.py  boolean.py  casino_game.py  clear_rank.py  database_driver.py  encoding.py  item_equipment_type.py  recommended_rank.py  request_category.py  seal_rarity.py  special_order_type.py
src/naagin/exceptions/: __init__.py  authentication_failed.py  base.py  friendship_cant_request.py  friendship_not_found.py  internal_server_error.py  invalid_parameter.py  method_not_allowed.py  not_found.py  under_maintenance_now.py
src/naagin/factories/: __init__.py  common.py
src/naagin/filters/: __init__.py
src/naagin/hooks/: __init__.py  request.py
src/naagin/injectors/: __init__.py  request.py  response.py
src/naagin/loggers/: __init__.py
src/naagin/middlewares/: __init__.py  aes.py  common.py  deflate.py  filter.py  maintenance.py  redirect.py  request.py  response.py  utils.py
src/naagin/models/: __init__.py  base.py  honor.py  swimsuit_arrange_flag.py  wallet.py
src/naagin/patches/: __init__.py  request.py
src/naagin/proto/: __init__.py  compress_flush.py  decompress_flush.py  update_finalize.py  update_flush.py  update_flush_ex.py
src/naagin/providers/: __init__.py  csv.py
src/naagin/schemas/: __init__.py  base.py  bgm.py  bromide.py  dishevelment.py  dishevelment_swimsuit.py  episode.py  friendship.py  furniture_myset.py  giftbox.py  girl.py  girl_equipment.py  girl_potential.py  honor.py  information.py  information_read.py  item_consume.py  item_equipemnt.py  item_furniture.py  item_seal.py  maintenance.py  max_combine_swimsuit.py  onsen_info.py  onsen_slot.py  option_item_auto_lock.py  owner.py  owner_checked_at.py  owner_room.py  photo_shoot.py  private_item.py  pvp_girl_equipment.py  quest.py  seal_base.py  session.py  special_order.py  swimsuit_arrange_flag.py  tutorial.py  wallet.py  ywrk_skill.py
src/naagin/settings/: __init__.py  api.py  api01.py  app.py  base.py  data.py  database.py  environment.py  fastapi.py  game.py  logging.py  version.py
src/naagin/types/: __init__.py  cookies.py  fields.py  headers.py  utils.py
src/naagin/utils/: __init__.py  case_sensitive_header.py  default_factories.py  doaxvv_header.py  (+5 more)
src/proxy/: addon.py  config.py  consts.py  proxy.py  utils.py  view.py  views.py
src/server/: config.py  consts.py  dependencies.py  main.py
tools/dump/: check.py  config.py  csv.py  csv_.py  data.py  flow.py  game.py  main.py  utils.py
tools/proxy/: addon.py  config.py  consts.py  contentview.py  utils.py  view.py
tools/winhttp/: build.ps1  hook.h
(+668 files in other folders)
