[project]
name = "naagin"
dynamic = ["version"]
requires-python = "~=3.13.0"

[tool.mypy]
cache_dir = "$MYPY_CONFIG_FILE_DIR/.cache/mypy"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiopath", "sqlparse"]
follow_untyped_imports = true

[tool.ruff]
cache-dir = ".cache/ruff"
src = ["src/naagin"]
line-length = 120

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["ALL"]
extend-select = ["PLC0415"]
ignore = [
    "A",       # flake8-builtins     *
    "D1",      # pydocstyle          undocumented-*
    "COM812",  # flake8-commas       missing-trailing-comma
    "D203",    # pydocstyle          incorrect-blank-line-before-class
    "D212",    # pydocstyle          multi-line-summary-first-line
    "E501",    # pycodestyle         line-too-long
    "ERA001",  # eradicate           commented-out-code
    "PLC0414", # Convention          useless-import-alias
]
extend-safe-fixes = [
    "F401",    # Pyflakes            unused-import
]
extend-unsafe-fixes = [
    "RET505",  # flake8-return       superfluous-else-return
]

[tool.ruff.lint.per-file-ignores]
"src/naagin/middlewares/**.py" = [
    "TID251",  # flake8-tidy-imports banned-api
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.datastructures.Default"]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["fastapi.datastructures.Default"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"starlette.requests.Request".msg = "Use fastapi.Request instead."
"starlette.responses.Response".msg = "Use fastapi.Response instead."
"starlette.middleware.Middleware".msg = "Use fastapi.middleware.Middleware instead."
"starlette.datastructures.Headers".msg = "Use fastapi.datastructures.Headers instead."
"starlette.exceptions.HTTPException".msg = "Use fastapi.exceptions.StarletteHTTPException instead."
"pydantic.BaseModel".msg = "Use naagin.base.models.CustomBaseModel instead."
"sqlalchemy.orm.DeclarativeBase".msg = "Use naagin.schemas.base.CustomBaseSchema instead."
"pydantic_settings.BaseSettings".msg = "Use naagin.settings.base.CustomBaseSettings instead."

[tool.ruff.format]
skip-magic-trailing-comma = true
